data/all_generated_tests/raw_wast_tests/block_IncorrectBranchTargetResolution_1809.wast
;; 10. **Test Sequential Blocks with Cross-targeted `br`**:    - Sequence of blocks containing `br` instructions that incorrectly target the next block.    - Ensures branching mechanism does not permit cross-targeting sequential block labels.    - Expected result: WebAssembly should cease execution due to cross-block target error, but wizard_engine might execute incorrectly.

(assert_invalid
  (module
    (func (block (block (br 1))))
  )
  "invalid branch depth"
)